Added STA013 Configuration

--- a/MP3_Player_Software/Experiment 3/MP3_Player_Software.build_log.htm
+++ b/MP3_Player_Software/Experiment 3/MP3_Player_Software.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.27.1.0
 Copyright (C) 2019 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Andrew Van Horn, Missouri S&T, LIC=----
+License Information: Jacob Lipina, Mars Rover Design Team, LIC=----
  
 Tool Versions:
 Toolchain:       PK51 Prof. Develpers Kit  Version: 9.60.0.0
@@ -18,20 +18,113 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.122.0.0
 Dialog DLL:      DP51.DLL V2.67.0.0 
 <h2>Project:</h2>
-C:\Users\andre\OneDrive\Documents\MST\CpE5160\CpE-5160_FS2019_8051-MP3-Player\MP3_Player_Software\Experiment 3\MP3_Player_Software.Uv2
-Project File Date:  10/22/2019
+C:\Users\Jacob Lipina\Documents\4.) Embedded Sys Design\CpE-5160_FS2019_8051-MP3-Player\MP3_Player_Software\Experiment 3\MP3_Player_Software.uvproj
+Project File Date:  10/29/2019
 
 <h2>Output:</h2>
 Build target 'Target 1'
-compiling AppMain.c...
-src\Application\AppMain.c(41): error C141: syntax error near 'printf', expected ';'
-compiling print_bytes.c...
-compiling I2C.c...
-src\Drivers\I2C.c(3): warning C315: unknown #directive 'Include'
-src\Drivers\I2C.c(7): error C141: syntax error near '{', expected 'hdata'
 compiling STA013.c...
-src\Modules\STA013.c(11): warning C173: missing return-expression
-src\Modules\STA013.c(11): warning C290: missing return value
+src\Modules\STA013.c(131): warning C291: not every exit path returns a value
+linking...
+BL51 BANKED LINKER/LOCATER V6.22.2.0 - SN: Eval Version
+COPYRIGHT ARM Germany GmbH 1987 - 2017
+"AppMain.obj",
+"print_bytes.obj",
+"Memory.obj",
+"memory_test.obj",
+"Port.obj",
+"SPI.obj",
+"Timing.obj",
+"UART.obj",
+"LCD.obj",
+"SDCard.obj",
+"I2C.obj",
+"STA013.obj" 
+TO "MP3_Player_Software" 
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_PRINT_MEMORY?PRINT_BYTES
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?CODE_MEMORY_INIT?MEMORY_TEST
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?XDATA_MEMORY_INIT?MEMORY_TEST
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_PORT_READPIN?PORT
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?UART_RECEIVE?UART
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_LCD_WRITE_STRING?LCD
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?LCD_INIT?LCD
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_SD_READBLOCK?SDCARD
+*** WARNING L1: UNRESOLVED EXTERNAL SYMBOL
+    SYMBOL:  CONFIG
+    MODULE:  STA013.obj (STA013)
+*** WARNING L1: UNRESOLVED EXTERNAL SYMBOL
+    SYMBOL:  CONFIG2
+    MODULE:  STA013.obj (STA013)
+*** WARNING L2: REFERENCE MADE TO UNRESOLVED EXTERNAL
+    SYMBOL:  CONFIG
+    MODULE:  STA013.obj (STA013)
+    ADDRESS: 0C3DH
+*** WARNING L2: REFERENCE MADE TO UNRESOLVED EXTERNAL
+    SYMBOL:  CONFIG
+    MODULE:  STA013.obj (STA013)
+    ADDRESS: 0C40H
+*** WARNING L2: REFERENCE MADE TO UNRESOLVED EXTERNAL
+    SYMBOL:  CONFIG2
+    MODULE:  STA013.obj (STA013)
+    ADDRESS: 0CE3H
+*** WARNING L2: REFERENCE MADE TO UNRESOLVED EXTERNAL
+    SYMBOL:  CONFIG2
+    MODULE:  STA013.obj (STA013)
+    ADDRESS: 0CE6H
+******************************************************************************
+* RESTRICTED VERSION WITH 0800H BYTE CODE SIZE LIMIT; USED: 139BH BYTE (245%) *
+******************************************************************************
+Program Size: data=94.1 xdata=50 code=6561
+LINK/LOCATE RUN COMPLETE.  14 WARNING(S),  0 ERROR(S)
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_PRINT_MEMORY?PRINT_BYTES
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?CODE_MEMORY_INIT?MEMORY_TEST
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?XDATA_MEMORY_INIT?MEMORY_TEST
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_PORT_READPIN?PORT
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?UART_RECEIVE?UART
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_LCD_WRITE_STRING?LCD
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?LCD_INIT?LCD
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_SD_READBLOCK?SDCARD
+*** WARNING L1: UNRESOLVED EXTERNAL SYMBOL
+    SYMBOL:  CONFIG
+    MODULE:  STA013.obj (STA013)
+*** WARNING L1: UNRESOLVED EXTERNAL SYMBOL
+    SYMBOL:  CONFIG2
+    MODULE:  STA013.obj (STA013)
+*** WARNING L2: REFERENCE MADE TO UNRESOLVED EXTERNAL
+    SYMBOL:  CONFIG
+    MODULE:  STA013.obj (STA013)
+    ADDRESS: 0C3DH
+*** WARNING L2: REFERENCE MADE TO UNRESOLVED EXTERNAL
+    SYMBOL:  CONFIG
+    MODULE:  STA013.obj (STA013)
+    ADDRESS: 0C40H
+*** WARNING L2: REFERENCE MADE TO UNRESOLVED EXTERNAL
+    SYMBOL:  CONFIG2
+    MODULE:  STA013.obj (STA013)
+    ADDRESS: 0CE3H
+*** WARNING L2: REFERENCE MADE TO UNRESOLVED EXTERNAL
+    SYMBOL:  CONFIG2
+    MODULE:  STA013.obj (STA013)
+    ADDRESS: 0CE6H
+*** FATAL ERROR L250: CODE SIZE LIMIT IN RESTRICTED VERSION EXCEEDED
+    MODULE:  STA013.obj (-----)
+    LIMIT:   0800H BYTES
 Target not created.
 Build Time Elapsed:  00:00:00
 </pre>
